// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings.vue should open dropdown when clicking toggle 1`] = `
<section class="settings"><button class="dropdown__toggle dropdown__toggle--active"><svg width="18" height="20" viewBox="0 0 18 20" xmlns="http://www.w3.org/2000/svg">
      <g fill="#036FE2" fill-rule="evenodd">
        <path d="M8.3 6.7l1.4-1.4L5 .58.3 5.29l1.4 1.42L4 4.4v11.6h2V4.4zM16.3 13.3L14 15.58V4h-2V15.6l-2.3-2.3-1.4 1.42 4.7 4.7 4.7-4.7z"></path>
      </g>
    </svg></button>
  <div class="dropdown is-open">
    <div class="filters">
      <h6 class="filters-title text is-xsmall is-txtSoftGrey u-tupper letter-spacing">SettingsDropdown.filter</h6>
      <ul class="list">
        <li class="type text is-caption is-txtGrey type--selected"><a href="javascript:void(0)" class="element element--selected">
            SettingsDropdown.types.maps
          </a></li>
        <!---->
        <!---->
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.favorited
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.shared
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.locked
          </a></li>
        <li class="type text is-caption is-txtGrey">
          <div class="element"><a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.publicPrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.privatePrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.linkPrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.passwordPrivacy
            </a></div>
        </li>
        <li class="type text is-caption is-txtGrey">
          <div class="element"><a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.builderType
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.kuvizType
            </a></div>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`Settings.vue should render correct contents based on filter and order in datasets section 1`] = `
<section class="settings"><button class="dropdown__toggle"><svg width="18" height="20" viewBox="0 0 18 20" xmlns="http://www.w3.org/2000/svg">
      <g fill="#036FE2" fill-rule="evenodd">
        <path d="M8.3 6.7l1.4-1.4L5 .58.3 5.29l1.4 1.42L4 4.4v11.6h2V4.4zM16.3 13.3L14 15.58V4h-2V15.6l-2.3-2.3-1.4 1.42 4.7 4.7 4.7-4.7z"></path>
      </g>
    </svg></button>
  <div class="dropdown">
    <div class="filters">
      <h6 class="filters-title text is-xsmall is-txtSoftGrey u-tupper letter-spacing">SettingsDropdown.filter</h6>
      <ul class="list">
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.datasets
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.subscribed
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.sample
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.favorited
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.shared
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.locked
          </a></li>
        <li class="type text is-caption is-txtGrey type--selected">
          <div class="element"><a href="javascript:void(0)" class="element--inline element--selected">
              SettingsDropdown.types.publicPrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.privatePrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.linkPrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.passwordPrivacy
            </a></div>
        </li>
        <!---->
      </ul>
    </div>
  </div>
</section>
`;

exports[`Settings.vue should render correct contents based on filter and order in maps section 1`] = `
<section class="settings"><button class="dropdown__toggle"><svg width="18" height="20" viewBox="0 0 18 20" xmlns="http://www.w3.org/2000/svg">
      <g fill="#036FE2" fill-rule="evenodd">
        <path d="M8.3 6.7l1.4-1.4L5 .58.3 5.29l1.4 1.42L4 4.4v11.6h2V4.4zM16.3 13.3L14 15.58V4h-2V15.6l-2.3-2.3-1.4 1.42 4.7 4.7 4.7-4.7z"></path>
      </g>
    </svg></button>
  <div class="dropdown">
    <div class="filters">
      <h6 class="filters-title text is-xsmall is-txtSoftGrey u-tupper letter-spacing">SettingsDropdown.filter</h6>
      <ul class="list">
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.maps
          </a></li>
        <!---->
        <!---->
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.favorited
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.shared
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            SettingsDropdown.types.locked
          </a></li>
        <li class="type text is-caption is-txtGrey type--selected">
          <div class="element"><a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.publicPrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.privatePrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline element--selected">
              SettingsDropdown.types.linkPrivacy
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.passwordPrivacy
            </a></div>
        </li>
        <li class="type text is-caption is-txtGrey">
          <div class="element"><a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.builderType
            </a> |
            <a href="javascript:void(0)" class="element--inline">
              SettingsDropdown.types.kuvizType
            </a></div>
        </li>
      </ul>
    </div>
  </div>
</section>
`;
